# deku-bench

./: Cargo.toml  README.md  run.bench  rust-toolchain.toml
.github/workflows/: main.yml
benches/: serialize.rs
