[package]
name = "deku-bench"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
binrw = "0.11.2"
bitvec = "1.0.1"
# deku with no bit support
deku = { version = "0.18.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
deku-bits = ["deku/bits"]

[[bench]]
name = "serialize"
harness = false

[profile.perf]
inherits = "release"
lto = "fat"
codegen-units = 1
