[package]
name = "deku-bench"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
binrw = "0.14.0"
bitvec = "1.0.1"
deku = { version = "0.19.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "serialize"
harness = false

[profile.perf]
inherits = "release"
lto = "fat"
codegen-units = 1
